--- a/Accent/Accent/src/main/webapp/WEB-INF/views/mypage.html
+++ b/Accent/Accent/src/main/webapp/WEB-INF/views/mypage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="assets/css/allStyle.css?after">
-<script src="assets/js/script.js"></script>
+<link rel="stylesheet" href="css/mypage.css?after">
+<script src="js/script.js"></script>
 <title>마이페이지</title>
 </head>
 <body>
