--- a/Accent/Accent/src/main/webapp/WEB-INF/views/mypage.html
+++ b/Accent/Accent/src/main/webapp/WEB-INF/views/mypage.html
@@ -8,7 +8,7 @@
 <body>
 <div class="mypage">
 	<div class="mainbar">
-		<img class="mainbar" src="images/mainbar.png"/>
+		<img class="mainbar" src="img/mainbar.png"/>
 	</div>
 	<div class = "title">
 		<br><h1 class="title_mp">마이페이지</h1>
@@ -30,11 +30,11 @@
 	</div>
 	<br>
 	<div class="buttonBox">
-		<button type="button" id="order" onclick="location.href='order.html'"><img src="images/mypage_order.png"></button>
-		<button type="button" id="basket" onclick="location.href='basket.html'"><img src="images/mypage_basket.png"></button>
+		<button type="button" id="order" onclick="location.href='order.html'"><img src="img/mypage_order.png"></button>
+		<button type="button" id="basket" onclick="location.href='basket.html'"><img src="img/mypage_basket.png"></button>
 		<br>
-		<button type="button" id="wishlist" onClick="location.href='wishlist.html'"><img src="images/mypage_wish.png"></button>
-		<button type="button" id="myinfo" onClick="location.href='myinfo.html'"><img src="images/mypage_info.png"></button>
+		<button type="button" id="wishlist" onClick="location.href='wishlist.html'"><img src="img/mypage_wish.png"></button>
+		<button type="button" id="myinfo" onClick="location.href='myinfo.html'"><img src="img/mypage_info.png"></button>
 	</div>
 </div>
 </body>
